# GeometricProcessing3D

./: CMakeLists.txt  README.md
examples/: main.cpp
examples/data/: chair.pcd
include/algorithm/: ppf.h
include/geometry/: pointcloud.h  trianglemesh.h
include/io/: objreader.h
include/utils/: helper_math.h
pybind/: arma.hpp  bind.cpp  eigen.hpp
pybind/algorithm/: algorithm.hpp
pybind/geometry/: pointcloud.hpp
python/: setup.py
python/test/: test_ppf.py  test_vec.py
src/algorithm/: ppf.cu
src/geometry/: pointcloud.cpp  trianglemesh.cpp
src/io/: objreader.cpp
